# TalentScout

./: README.md  app.py  aqchat.py  pyproject.toml
chains/: eval_chain.py  question_chain.py
core/: config.py  llm_wrapper.py  utils.py
data/: candidates.json
ui/: candidate_form.py  interview_flow.py
